--- a/recipes/pudding.html
+++ b/recipes/pudding.html
@@ -3,17 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>Pudding</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <a href="../index.html">Home</a>
         <h1>Pudding</h1>
-        <img src="https://www.allrecipes.com/thmb/DiBqQVA7cI9Z_Do5pzguSbH392s=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/20586-homemade-vanilla-pudding-DDMFS-4x3-b69285facb244125bed3db6ad4cf2d9f.jpg" alt="Pudding">
+        <img src="https://www.allrecipes.com/thmb/DiBqQVA7cI9Z_Do5pzguSbH392s=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/20586-homemade-vanilla-pudding-DDMFS-4x3-b69285facb244125bed3db6ad4cf2d9f.jpg" alt="Pudding" class="center">
 
         <h2>Description</h2>
-        <p>This pudding recipe (via <a href="https://www.allrecipes.com/recipe/20586/homemade-vanilla-pudding/">All Recipes</a>) "with vanilla is a rich and delectable dessert. There is no substitute for the butter!"</p>
+        <p class="h2margin">This pudding recipe (via <a href="https://www.allrecipes.com/recipe/20586/homemade-vanilla-pudding/">All Recipes</a>) "with vanilla is a rich and delectable dessert. There is no substitute for the butter!"</p>
 
         <h2>Ingredients</h2>
-        <ul>
+        <ul class="h2margin ingredients">
             <li>2 cups milk</li>
             <li>½ cup white sugar</li>
             <li>3 tablespoons cornstarch</li>
@@ -23,7 +24,7 @@
         </ul>
 
         <h2>Steps</h2>
-        <ol>
+        <ol class="h2margin">
             <li>Heat milk in a medium saucepan over medium heat until bubbles form at the edges.</li>
             <li>Mix sugar, cornstarch, and salt together in a small bowl.</li>
             <li>Add sugar, cornstarch, and salt mixture to hot milk, a little at a time, stirring until thick enough to coat the back of the spoon.</li>
